--- a/app.css
+++ b/app.css
@@ -1,3 +1,22 @@
-h1{
-    color : teal
-}
+body {
+    font-family: product-sans;
+    margin: 0;
+    padding: 0;
+    background-color: #f0f0f0;
+  }
+  
+  header, footer {
+    background-color: #333;
+    color: #fff;
+    padding: 20px;
+    text-align: center;
+  }
+  
+  main {
+    padding: 40px;
+  }
+  
+  section {
+    max-width: 800px;
+    margin: 0 auto;
+  }
